# OptiMac

./: .flake8  .gitignore  CLAUDE.md  GerdsenAI_OptiMac_Documentation.md  LICENSE  MCP_COMMANDS.md  Molt_and_OptiMac.code-workspace  gerdsenai_optimac_improved.py  improved_installer.sh  mac-mini-m4-ai-optimization-guide.md  pyproject.toml  requirements.txt  setup.py
.docs/: apple-silicon-ai-optimization-guide.md
.github/workflows/: release.yml
Agent-main/: .mcp.json  CLAUDE.md
Agent-main/.claude/agents/: 1-gerdsenai-main-agent.md  2-architect-steve-jobs.md  2-reviewer-elon-musk.md  2-venture-capital-agent.md  3-aiops-agent.md  3-database-expert-agent.md  3-devops-agent.md  3-hig-ui-ux-agent.md  3-qa-agent.md  (+6 more)
_logo/: OptiMac.icns
_logo/Gerdsen_AI_Icon.icon/: icon.json
gerdsenai_optimac/: __init__.py
gerdsenai_optimac/gui/: __init__.py  commands.py  dialogs.py  icons.py  menu_app.py  monitors.py  sudo.py  terminal_widget.py  themes.py
gerdsenai_optimac/mcp/: __init__.py  client.py  discovery.py  registry.py
optimac-mcp-server/: README.md  package-lock.json  package.json
optimac-mcp-server/scripts/: install.sh  setup-sudo.sh
optimac-mcp-server/src/: index.ts
optimac-mcp-server/tests/: parsers.test.ts
scripts/: build.sh
tests/: README.md  TEST_ANALYSIS.md  live_mcp_test.py  optimization_test_results.md  remaining_tools_results.md  scratch_test.txt  scratch_test.txt.bak  test_benchmark.py  test_final2.py  test_mcp_all_tools.py  test_opt_nosudo.py  test_optimizations.py  test_remaining.py  test_remaining_fixes.py  test_results.json  test_results.md
(+32 files in other folders)
